<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="de.belau_online.wtfpm.MainActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layout_LinearLAyout">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textAppearance="@android:style/TextAppearance.Material.Title"
                android:gravity="top|center_horizontal"
                android:layout_row="2"
                android:layout_column="0"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:id="@+id/textView_title" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:text="@string/start"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/button_toggleStartStop"
                    android:layout_weight="1" />

                <Button
                    android:text="@string/reset"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/button_reset"
                    android:layout_weight="1" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView_title_timeElapsed"
                android:textAppearance="@android:style/TextAppearance.Material.Small"
                android:text="@string/time_elapsed" />

            <Chronometer
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/chronometer_timeElapsed"
                android:format="%s"
                android:visibility="visible"
                android:textAppearance="@android:style/TextAppearance.Material.Large" />

            <TextView
                android:text="0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView_time_elapsed"
                android:textAppearance="@android:style/TextAppearance.Material.Large" />

            <TextView
                android:text="@string/num_WTF"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView_title_numberOfWTFs" />

            <TextView
                android:text="0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView_numWTFs"
                android:textAppearance="@android:style/TextAppearance.Material.Large" />

            <TextView
                android:text="@string/app_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView_title_WTFpm" />

            <TextView
                android:text="0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView_WTFpm"
                android:textAppearance="@android:style/TextAppearance.Material.Large" />

            <Button
                android:text="@string/wtf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button_addWTF"
                android:background="@android:drawable/ic_notification_overlay" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/wtfm"
                android:id="@+id/imageView"
                android:adjustViewBounds="true"
                android:cropToPadding="false" />

            <TextView
                android:text="@string/org"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView_titleOdgIdea"
                android:textAppearance="@android:style/TextAppearance.Material.Caption" />

            <TextView
                android:text="@string/link_org"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView_link"
                android:textAppearance="@android:style/TextAppearance.Material.Caption" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
